--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -1,3 +1,9 @@
+html{
+    -webkit-user-seletct: none;
+    -moz-user-seletct: none;
+    -ms-user-seletct: none;
+}
+
 .box {
     clear: both;
     padding: 10px;
@@ -40,20 +46,42 @@ img.folder {
 }
 
 .top {
-    width: 200px;
-    font-size: 120px;
-    height: 200px;
+    width: 130px;
+    font-size: 60px;
+    height: 130px;
     background: gray;
     opacity: 0.9;
     position: fixed;
-    bottom: 50px;
+    bottom: 20px;
     right: 50px;
     text-align: center;
-    line-height: 180px;
+    line-height: 130px;
     border-radius: 100px;
     z-index: 1000;
 }
 
+.animation{
+    width: 130px;
+    font-size: 60px;
+    height: 130px;
+    background: gray;
+    opacity: 0.9;
+    position: fixed;
+    bottom: 170px;
+    right: 50px;
+    text-align: center;
+    line-height: 130px;
+    border-radius: 100px;
+    z-index: 1000; 
+}
+
 .demo{
     width: 100%;
+    height: 100%;
+    /* margin-top: 30px; */
+}
+
+#contain{
+    width: 100%;
+    text-align: center;
 }
